...
        icon: Icons.close,
        tooltip: 'Close',
        onPressed: () => unawaited(_close()),
      ),
      actions: [
        RA_DialogButton(
          'Save',
          () => unawaited(_save()),
          color: RA_ColourStyles.secondary,
        ),
      ],
      floatingActionButton: _previewReady
          ? RA_PressScale(
...
