...
        icon: Icons.close,
        tooltip: 'Close',
        onPressed: () => Navigator.pop(context),
      ),
      actions: [
        RA_DialogButton(
          'Save',
          () => unawaited(_save()),
          color: RA_ColourStyles.secondary,
        ),
      ],
      body: SingleChildScrollView(
        padding: RA_ShapeStyles.bodyPadding,
...
                    RA_RadioOption(
                      value: DriftCompensationTypeCodeEnum.InitialRing,
                      title: 'Classic Interval',
                    ),
                    RA_RadioOption(
                      value: DriftCompensationTypeCodeEnum.ActualDismissal,
                      title: 'Actual Dismissal',
                      subtitle: 'Next alarm based on when you dismiss',
                    ),
                  ],
                ),
              ),
            ),
...
